--- a/simpleweb/Dockerfile
+++ b/simpleweb/Dockerfile
@@ -3,8 +3,10 @@ FROM node:alpine
 
 WORKDIR /usr/app
 
-# Install some dependencies
+# Install some depenendencies
+COPY ./package.json ./
 RUN npm install
+COPY ./ ./
 
 # Default command
 CMD ["npm", "start"]
