--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
     - docker
 
 before_install:
-    - docker build -t rintjema/docker-kubernetes -f Dockerfile.dev .
+    - docker build -t rintjema/docker-kubernetes -f frontend/Dockerfile.dev .
     
 script:
     - docker run -e CI=true rintjema/docker-kubernetes npm run test
