--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
     - docker build -t rintjema/docker-kubernetes -f frontend/Dockerfile.dev frontend/.
     
 script:
-    - docker run -e CI=true rintjema/docker-kubernetes npm run test
+    - docker run -e CI=true rintjema/docker-kubernetes npm test
 
 deploy:
     provider: elasticbeanstalk
