--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
     - docker build -t rintjema/docker-kubernetes -f frontend/Dockerfile.dev frontend/.
     
 script:
-    - docker run -e CI=true rintjema/docker-kubernetes npm test
+    - docker run -e CI=true rintjema/docker-kubernetes npm run test
 
 deploy:
     provider: elasticbeanstalk
@@ -18,5 +18,7 @@ deploy:
     bucket_path: "docker-kubernetes"
     on:
         branch: master
-    access_key_id: $AWS_ACCESS_KEY
-    secret_access_key: $AWS_SECRET_KEY      
+    access_key_id: 
+        secure: $AWS_ACCESS_KEY
+    secret_access_key: 
+        secure: $AWS_SECRET_KEY      
