--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
     - docker
 
 before_install:
-    - docker build -t rintjema/docker-kubernetes -f frontend/Dockerfile.dev frontend/.
+    - docker build -t rintjema/docker-kubernetes -f Dockerfile.dev .
     
 script:
     - docker run -e CI=true rintjema/docker-kubernetes npm run test
@@ -18,7 +18,5 @@ deploy:
     bucket_path: "docker-kubernetes"
     on:
         branch: master
-    access_key_id: 
-        secure: $AWS_ACCESS_KEY
-    secret_access_key: 
-        secure: $AWS_SECRET_KEY      
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY      
